force-app/main/default/objects/custom_create175__c/custom_create175__c.object-meta.xml
<CustomObject>
    <label>Custom created object175</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects175</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>