force-app/main/default/objects/custom_create175__c/fields/custom_create_175field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_175field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 175field530</label>
    <type>Checkbox</type>
</CustomField>